--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 				<hr class="style-eight">
 
-				<a class="button green" href="#2"><img src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Задать вопрос</a>
+				<a class="button green" href="https://wa.me/79056857634?text=Здравствуйте!"><img
+						src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Задать вопрос</a>
 
 				<figure class="fig">
 					<a href="style.css"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
