--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 		<div class="wrapper">
 			<div class="container">
 				<figure class="fig">
-					<a href="style.css"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
+					<a href="index.html" title="Главная"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
 					<figcaption>
 						<p>@oftalmarina_dominyk</p>
 					</figcaption>
 				</figure>
 
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maxime fugiat sit id tenetur? Aliquid aut
-					tempora blanditiis impedit similique velit facilis quae nisi animi fuga. Quisquam ducimus accusantium tempora.
+					Самый круто доктор ❤️
 				</p>
 
 				<hr class="style-eight">
 
-				<a class="button" href="#1">Консультация</a>
+				<a class="button" href="Consultation.html">Консультация</a>
 				<br>
-				<a class="button" href="#2">Отзывы</a>
+				<a class="button" href="https://www.instagram.com/stories/highlights/18007398454276597/" title="Instagram">Ваши
+					Отзывы</a>
 
 
 				<hr class="style-eight">
@@ -39,15 +39,13 @@
 						src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Задать вопрос</a>
 
 				<figure class="fig">
-					<a href="style.css"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
+					<a href="index.html"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
 					<figcaption>
 						<p>@oftalmarina_dominyk</p>
 					</figcaption>
 				</figure>
 
-				<p class="inst_href">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae temporibus hic
-					voluptas sapiente, doloremque vero quos atque quo modi, aliquam ad beatae tempore dicta et rerum inventore
-					odio fugit! Iusto?</p>
+				<p class="inst_href" title="Главная">Самый круто доктор ❤️</p>
 
 			</div>
 		</div>
