--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</figure>
 
 				<p>
-					Самый круто доктор ❤️
+					Самый крутой доктор ❤️
 				</p>
 
 				<hr class="style-eight">
@@ -45,7 +45,7 @@
 					</figcaption>
 				</figure>
 
-				<p class="inst_href" title="Главная">Самый круто доктор ❤️</p>
+				<p class="inst_href" title="Главная">Самый крутой доктор ❤️</p>
 
 			</div>
 		</div>
