--- a/Consultation.html
+++ b/Consultation.html
@@ -15,37 +15,50 @@
 		<div class="wrapper">
 			<div class="container">
 				<figure class="fig">
-					<a href="index.html"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
+					<a href="index.html"><img src="img/inst_logo.jpeg" width="100" height="100" alt="Log_img"></a>
 					<figcaption>
-						<p>@oftalmarina_dominyk</p>
+						<p><span>@oftalmarina_dominyk</span></p>
 					</figcaption>
 				</figure>
 
-				<p>
-					Консультация онлайн <br>
-					- 45 мин. - <span>мильььььёён 😀</span> руб.
 
+
+
+				<p>Запись на приём<br>
+					<span>800</span> руб.
 				</p>
-
-
-				<a class="button green"
-					href="https://wa.me/79054383922?text=Добрый день! Хочу записаться на консультацию онлайн."><img
-						src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Консультация онлайн</a>
+				<a class="button green" href="https://wa.me/79054383922?text=Здравствуйте!Как можно попасть к вам на приём?...">
+					<img src="img/icons8-whatsapp-40.png" alt="whatsapp_logo">
+					Запись на приём
+				</a>
 				<br>
 
 
 				<hr class="style-eight">
 
+				<p>Консультация онлайн<br>
+					<span>600</span> руб.
+				</p>
+				<a class="button green"
+					href="https://wa.me/79054383922?text=Добрый день! Хочу записаться на консультацию онлайн.">
+					<img src="img/icons8-whatsapp-40.png" alt="whatsapp_logo">
+					Консультация онлайн
+				</a>
+				<br>
+
+
+				<hr class="style-eight">
+
+
 				<p>
 					Консультация с выездом на дом <br>
-					коронавирус же ?! ?? -_-
-
+					<span>1500</span> руб.
 				</p>
-
-
 				<a class="button green"
-					href="https://wa.me/79054383922?text=Добрый день! Хочу записаться на консультацию на дому."><img
-						src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Консультация с выездом на дом</a>
+					href="https://wa.me/79054383922?text=Добрый день! Хочу записаться на консультацию на дому.">
+					<img src="img/icons8-whatsapp-40.png" alt="whatsapp_logo">
+					Консультация с выездом на дом
+				</a>
 
 			</div>
 		</div>
