--- a/index.html
+++ b/index.html
@@ -14,39 +14,79 @@
 	<main>
 		<div class="wrapper">
 			<div class="container">
-				<figure class="fig">
-					<a href="index.html" title="Главная"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
-					<figcaption>
-						<p>@oftalmarina_dominyk</p>
-					</figcaption>
-				</figure>
+				<header>
+					<div class="header">
+						<div class="figure">
+							<figure class="fig">
+								<a href="index.html" title="Главная"><img src="img/inst_logo.jpeg" width="100" height="100"
+										alt="Log_img"></a>
+								<figcaption>
+									<p> <span>@oftalmarina_dominyk.</span> "Ваш проводник в мир здоровых глаз"</p>
+								</figcaption>
+							</figure>
+						</div>
+						<div class="head_title">
+							<p>Здравствуйте!!!</p>
+							⠀<p>Меня зовут Марина. Я-врач-офтальмолог. <br>
+								Стаж моей работы 9 лет. <br>
+								Веду детский и взрослый приём. <br><br>
+								Чем я могу вам помочь?</p>
+							⠀⠀<p></p>
+							<ul>
+								<li class="first_fix">👀Очные консультации по адресу: <b>г.Воронеж, ул.Шишкова 107б, ул.Бульвар Победы
+										13</b>
+								</li>
+								<li class="second">🌸амбулаторный приём взрослых и детей с проведением осмотра и назначением необходимых
+									рекомендаций.
+								</li>
+								<li>🌸Плановые осмотры беременных</li>
+								<li>🌸Плановые осмотры детей в 1 мес и 1 год</li>
+								<li>🌸Лечение воспалительных заболеваний глаз(конъюнктивит, блефарит)</li>
+								<li>🌸Лечение непроходимости слёзного канала новорожденных(обучаю массажу, возможен выезд на дом)</li>
+								<li>🌸приём детей и взрослых с нарушениями рефракции(миопия, гиперметропия, астигматизм)</li>
+								<li>🌸лечение амблиопии</li>
+								<li>🌸подбор очковой, контактной коррекции</li>
+								<li>🌸индивидуальный подход к лечению ССГ, халязиона, хронических конъюнктивитов и блефаритов.</li>
+							</ul>
 
-				<p>
-					Самый крутой доктор ❤️
-				</p>
+							<ul>
+								<li class="first_fix center">👀<b>Онлайн-консультация в формате видеосвязи :</b></li>
+								<li class="second">✅Помощь родителям по уходу за ребёнком до года</li>
+								<li>✅Обучение техники массажа при непроходимости слёзного канала</li>
+								<li>✅"Второе мнение" - когда у вас есть осмотр, но в силу каких-либо причин доктор не смог "донести " до
+									вас
+									необходимую информацию.</li>
+								<li>✅Помощь в выборе оптической коррекции(очки, линзы, ночные линзы, лазерная коррекция) Обсудим все
+									плюсы и
+									минусы,
+									чтобы принять правильное решение и выбрать своё.</li>
+								<li>✅Ведение детей с амблиопией и гиперметропией(коррекция зрительных нагрузок)</li>
+								<li>✅Помощь родителям при назначении ребёнку очков!</li>
+								<li>✅Халязион, блефарит, Синдром Сухого Глаза-при подтверждённом диагнозе лечится очень долго, ведение в
+									онлайн
+									-формате экономит ваше время.</li>
+								<li>✅Расшифровка анализов и полученных результатов обследования</li>
+								<li>✅Определение тактики, дополнительных методов исследования и необходимых консультаций при
+									установленном
+									диагнозе.</li>
+								<li>✅Срочная помощь (травмы, инородные тела, покраснение глаз) при необходимости- выезд на осмотр в
+									медучреждение.</li>
+								<br>
+								<li class="center"> 👀<b>Выезд на дом осуществляется строго по договорённости.</b></li>
+							</ul>
+						</div>
+					</div>
+				</header>
+				<main>
+					<hr class="style-eight">
+					<a class="button" href="Consultation.html">Консультация</a>
+					<br>
+					<a class="button" href="https://www.instagram.com/oftalmarina_dominyk/" title="Instagram">Ваши Отзывы</a>
+					<hr class="style-eight">
+					<a class="button" href="https://wa.me/79054383922?text=Здравствуйте!"><img src="img/icons8-whatsapp-40.png"
+							alt="whatsapp_logo"> Задать вопрос</a>
 
-				<hr class="style-eight">
-
-				<a class="button" href="Consultation.html">Консультация</a>
-				<br>
-				<a class="button" href="https://www.instagram.com/stories/highlights/18007398454276597/" title="Instagram">Ваши
-					Отзывы</a>
-
-
-				<hr class="style-eight">
-
-				<a class="button green" href="https://wa.me/79054383922?text=Здравствуйте!"><img
-						src="img/icons8-whatsapp-40.png" alt="whatsapp_logo"> Задать вопрос</a>
-
-				<figure class="fig">
-					<a href="index.html"><img src="img/inst_logo.jpg" width="100" height="100" alt="Log_img"></a>
-					<figcaption>
-						<p>@oftalmarina_dominyk</p>
-					</figcaption>
-				</figure>
-
-				<p class="inst_href" title="Главная">Самый крутой доктор ❤️</p>
-
+				</main>
 			</div>
 		</div>
 	</main>
