--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							⠀⠀<p></p>
 							<ul>
 								<li class="first_fix">👀Очные консультации по адресу: <b>г.Воронеж, ул.Шишкова 107б, ул.Бульвар Победы
-										13</b>
+										13</b><br>а также в<b> г. Липецк</b>
 								</li>
 								<li class="second">🌸амбулаторный приём взрослых и детей с проведением осмотра и назначением необходимых
 									рекомендаций.
@@ -72,7 +72,7 @@
 								<li>✅Срочная помощь (травмы, инородные тела, покраснение глаз) при необходимости- выезд на осмотр в
 									медучреждение.</li>
 								<br>
-								<li class="center"> 👀<b>Выезд на дом осуществляется строго по договорённости.</b></li>
+								<li class="center"> 👀<b>Приём ведётся строго по договорённости.</b></li>
 							</ul>
 						</div>
 					</div>
