--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 							⠀⠀<p></p>
 							<ul>
 								<li class="first_fix">👀Очные консультации по адресу: <b>г.Воронеж, ул.Шишкова 107б, ул.Бульвар Победы
-										13</b><br>а также в<b> г. Липецк</b>
+										13</b>
+								</li>
+								<li class="first_fix">👀а также в<b> г. Липецк</b>
 								</li>
 								<li class="second">🌸амбулаторный приём взрослых и детей с проведением осмотра и назначением необходимых
 									рекомендаций.
