--- a/Consultation.html
+++ b/Consultation.html
@@ -24,8 +24,8 @@
 
 
 
-				<p>Запись на приём<br>
-					<span>1000</span> руб.
+				<p>Очный прием<br>
+					<span>2000</span> руб.
 				</p>
 				<a class="button green" href="https://wa.me/79054383922?text=Здравствуйте!Как можно попасть к вам на приём?...">
 					<img src="img/icons8-whatsapp-40.png" alt="whatsapp_logo">
@@ -37,7 +37,7 @@
 				<hr class="style-eight">
 
 				<p>Консультация онлайн<br>
-					<span>790</span> руб.
+					<span>990</span> руб.
 				</p>
 				<a class="button green"
 					href="https://wa.me/79054383922?text=Добрый день! Хочу записаться на консультацию онлайн.">
